[package]
name = "WillYouBeVyValentine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = "0.12.0"
bevy_embedded_assets = "0.9.1"

[build-dependencies]
embed-resource = "2.4.1"